// ************************************************************************
// Copyright (C) 2022 plgd.dev, s.r.o.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// ************************************************************************

syntax = "proto3";

package service.pb;

import "pb/get_identity_csr.proto";
import "pb/update_identity_certificate.proto";

option go_package = "github.com/plgd-dev/client-application/pb;pb";

message OwnDeviceRequest {
  message GetIdentityCsr {
    // Defines how long own process will wait for the OwnDeviceRequest with set_identity_certificate in nanoseconds. Default value is 15secs.
    int64 timeout = 1;
  }
  string device_id = 1;
  // If is set, the own process will be paused and OwnDeviceResponse.get_identity_csr will be set.
  // The next call to OwnDevice must contain set_identity_certificate with filled state.
  GetIdentityCsr get_identity_csr = 2;
  // Next call after OwnDevice with filled get_identity_csr.
  UpdateIdentityCertificateRequest set_identity_certificate = 3;
}

message OwnDeviceResponse {
  // Filled when OwnDeviceRequest.get_identity_csr is true
  GetIdentityCSRResponse get_identity_csr = 1; 
}